# amqp1_0

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  __CMakeLists.txt  amqp1_0.cbp  amqp1_0_C.cbp  amqp_wire_formatting.h  library.c
.github/workflows/: cmake.yml
Docker/: Dockerfile
amqp_lib/: .gitignore  CMakeLists.txt  amqp_wire_formatting.c  amqp_wire_formatting.h  decode.c  decode.h  encode.c  encode.h  library.c  library.h  mem_utils.c  mem_utils.h  message.c  message.h  types.h
fuzz/: CMakeLists.txt  Tutorial  fuzz_me.c
test/: .gitignore  TestLibrary.c
test/suite_1/: CMakeLists.txt  message_encode_decode  message_encode_decode.c  suite_1.c
test/suite_1/resources/: CMakeLists.txt
